--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "scripts": {
       "test": "tree-sitter test && tree-sitter parse examples/* --quiet --time",
       "test-windows": "tree-sitter test"
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.ispc",
+      "file-types": [
+        "ispc"
+      ]
+    }
+  ]
 }
