--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "author": "Fabian Wermelinger",
   "license": "MIT",
+  "dependencies": {
+    "nan": "^2.15.0"
+  },
   "devDependencies": {
-      "tree-sitter-c": "^0.20.2"
+      "tree-sitter-c": "^0.20.2",
+      "tree-sitter-cli": "^0.20.0"
   },
   "scripts": {
       "test": "tree-sitter test && tree-sitter parse examples/* --quiet --time",
