--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "tree-sitter-cli": "^0.20.0"
   },
   "scripts": {
-      "test": "tree-sitter test && tree-sitter parse examples/* --quiet --time",
+      "test": "tree-sitter test && tree-sitter parse examples/*.ispc --quiet --time",
       "test-windows": "tree-sitter test"
   },
   "tree-sitter": [
