--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tree-sitter-ispc",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "ISPC grammar for tree-sitter (based on C grammar)",
   "main": "bindings/node",
   "repository": {
       "type": "git",
-      "url": "https://github.com/tree-sitter/tree-sitter-ispc.git"
+      "url": "https://github.com/ispc/ispc.tree-sitter"
   },
   "author": "Fabian Wermelinger",
   "license": "MIT",
@@ -13,7 +13,7 @@
     "nan": "^2.15.0"
   },
   "devDependencies": {
-      "tree-sitter-c": "^0.20.2",
+      "tree-sitter-c": "^0.20.3",
       "tree-sitter-cli": "^0.20.0"
   },
   "scripts": {
